moved scoped card css to global since it's used in 2 different components. fixed event live flow when going live from my events tab for regular user

--- a/src/global.scss
+++ b/src/global.scss
@@ -37,3 +37,42 @@
   z-index:7;
 }
 
+.md-card-example {
+  .md-title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .md-subhead {
+    .md-icon {
+      $size: 16px;
+
+      width: $size;
+      min-width: $size;
+      height: $size;
+      font-size: $size !important;
+    }
+
+    span {
+      vertical-align: middle;
+    }
+  }
+
+  .card-details {
+    margin-top: 8px;
+    display: flex;
+    align-items: center;
+
+    .md-icon {
+      margin: 8px 0;
+    }
+  }
+
+  .md-button-group {
+    line-height: 24px;
+    display: flex;
+    .description-item {
+      margin-left:8px;
+    }
+  }
+}
+
