--- a/src/global.scss
+++ b/src/global.scss
@@ -26,15 +26,20 @@
   bottom:0;
   right:0;
   left:0;
-  margin:0 auto;
+
 }
 
-.top-progress-bar{
+.md-progress-bar.top-progress-bar{
   position:absolute;
   top:0;
   right:0;
   left:0;
   z-index:7;
+}
+
+.full-height-relative{
+  height:100%;
+  position:relative;
 }
 
 .md-card-example {
