--- a/src/global.scss
+++ b/src/global.scss
@@ -87,7 +87,10 @@ body{
 //   -webkit-transform: translate3d(0,0,0);
 //   // transform: translate3d(0,0,0);
 // }
-
+.md-chip.high-gravity{
+  background-color: rgba(255, 13, 13, 0.70) !important;
+  color: white!important;
+}
 .md-card-example {
   .md-title {
     overflow: hidden;
